--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
   </distributionManagement>
 
   <properties>
-    <project.version>0.5.2-SNAPSHOT</project.version>
+    <project.version>0.5.2</project.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
