[CELEBORN-1635] Introduce Blaze support document
### What changes were proposed in this pull request?

Introduce Blaze support document.

### Why are the changes needed?

[Blaze](https://github.com/kwai/blaze) supports Celeborn as remote shuffle service. It's recommened to Blaze support document for introduction of Blaze usage.

### Does this PR introduce _any_ user-facing change?

No.

### How was this patch tested?

No.

Closes #2787 from SteNicholas/CELEBORN-1635.

Authored-by: SteNicholas <programgeek@163.com>
Signed-off-by: Shuang <lvshuang.xjs@alibaba-inc.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,5 +97,7 @@ nav:
       - Worker Exclusion: developers/workerexclusion.md
       - Integrating Celeborn: developers/integrate.md
       - SBT Build: developers/sbt.md
-      - Gluten Support: developers/glutensupport.md
+      - Native Engine Integration:
+        - Blaze: developers/blazesupport.md
+        - Gluten: developers/glutensupport.md
       - Helm Charts: developers/helm-charts.md
