[CELEBORN-1569][FOLLOWUP] Using different service unit test log name

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,7 +38,7 @@ jobs:
       if: failure()
       uses: actions/upload-artifact@v4
       with:
-        name: service-unit-test-log
+        name: service-java-${{ matrix.java }}-unit-test-log
         path: |
           **/target/test-reports/**
           **/target/unit-tests.log
