--- a/.github/workflows/sbt.yml
+++ b/.github/workflows/sbt.yml
@@ -88,7 +88,7 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-            name: spark-${{ matrix.spark }}-unit-test-log
+            name: spark-${{ matrix.spark }}-java-${{ matrix.java }}-scala-${{ matrix.scala }}-unit-test-log
             path: |
                 **/target/test-reports/**
                 **/target/unit-tests.log
@@ -191,7 +191,7 @@ jobs:
       if: failure()
       uses: actions/upload-artifact@v4
       with:
-          name: spark-${{ matrix.spark }}-scala-${{ matrix.scala }}-unit-test-log
+          name: spark-${{ matrix.spark }}-java-${{ matrix.java }}-scala-${{ matrix.scala }}-unit-test-log
           path: |
               **/target/test-reports/**
               **/target/unit-tests.log
@@ -227,7 +227,7 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-            name: flink-${{ matrix.flink }}-unit-test-log
+            name: flink-${{ matrix.flink }}-java-${{ matrix.java }}-unit-test-log
             path: |
                 **/target/test-reports/**
                 **/target/unit-tests.log
@@ -255,7 +255,7 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: mr-unit-test-log
+          name: mr-java-${{ matrix.java }}-unit-test-log
           path: |
             **/target/test/
             **/target/test-reports/**
