[CELEBORN-1633] Return more raft group information
### What changes were proposed in this pull request?

As title, sub task of [CELEBORN-1628](https://issues.apache.org/jira/browse/CELEBORN-1628)

### Why are the changes needed?

To return more peer info, likes priority.

and also return the group log info.

### Does this PR introduce _any_ user-facing change?

No.

### How was this patch tested?
<img width="1607" alt="image" src="https://github.com/user-attachments/assets/4f5cef5a-d42b-47be-888f-46ad05f7105d">

Closes #2780 from turboFei/more_group_info.

Authored-by: Wang, Fei <fwang12@ebay.com>
Signed-off-by: Shuang <lvshuang.xjs@alibaba-inc.com>

--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -538,12 +538,43 @@ components:
         startUpRole:
           type: string
           description: The raft start up role of the master.
+        priority:
+          type: integer
+          format: int32
+          description: The raft peer priority.
       required:
         - commitIndex
         - id
         - address
         - clientAddress
         - startUpRole
+
+    RatisLogTermIndex:
+      type: object
+      properties:
+        term:
+          type: integer
+          format: int64
+          description: The term of the log entry.
+        index:
+          type: integer
+          format: int64
+          description: The index of the log entry.
+      required:
+        - term
+        - index
+
+    RatisLogInfo:
+      type: object
+      properties:
+        lastSnapshot:
+          $ref: '#/components/schemas/RatisLogTermIndex'
+        applied:
+          $ref: '#/components/schemas/RatisLogTermIndex'
+        committed:
+          $ref: '#/components/schemas/RatisLogTermIndex'
+        lastEntry:
+          $ref: '#/components/schemas/RatisLogTermIndex'
 
     MasterInfoResponse:
       type: object
@@ -558,6 +589,8 @@ components:
           description: The raft commit info of the master.
           items:
             $ref: '#/components/schemas/MasterCommitData'
+        logInfo:
+            $ref: '#/components/schemas/RatisLogInfo'
       required:
         - groupId
 
