--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -390,6 +390,26 @@ paths:
               schema:
                 $ref: '#/components/schemas/HandleResponse'
 
+  /api/v1/ratis/local_raft_meta_conf:
+    post:
+      tags:
+        - Ratis
+      operationId: generateLocalRaftMetaConf
+      description: Generate a new-raft-meta.conf file based on original raft-meta.conf and new peers, which is used to move a raft node to a new node.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RatisLocalRaftMetaConfRequest'
+      responses:
+        "200":
+          description: The request was successful.
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+
 components:
   schemas:
     ConfigData:
@@ -938,6 +958,17 @@ components:
           description: The peer address and priority of the peer.
           additionalProperties:
             type: integer
+
+    RatisLocalRaftMetaConfRequest:
+      type: object
+      properties:
+        peers:
+          type: array
+          description: The new peers to generate a new-raft-meta.conf file with existing peers.
+          items:
+            $ref: '#/components/schemas/RatisPeer'
+      required:
+        - peers
 
     HandleResponse:
       type: object
