--- a/pom.xml
+++ b/pom.xml
@@ -991,7 +991,6 @@
           <version>${maven.plugin.scala.version}</version>
           <configuration>
             <args>
-              <arg>-Ywarn-unused-import</arg>
               <arg>-unchecked</arg>
               <arg>-deprecation</arg>
               <arg>-feature</arg>
@@ -1373,7 +1372,7 @@
       <id>spark-3.0</id>
       <modules>
         <module>client-spark/common</module>
-        <module>client-spark/spark-3</module>
+        <module>client-spark/spark-3-4</module>
         <module>client-spark/spark-3-columnar-common</module>
         <module>client-spark/spark-3-columnar-shuffle</module>
         <module>client-spark/spark-3-shaded</module>
@@ -1393,7 +1392,7 @@
       <id>spark-3.1</id>
       <modules>
         <module>client-spark/common</module>
-        <module>client-spark/spark-3</module>
+        <module>client-spark/spark-3-4</module>
         <module>client-spark/spark-3-columnar-common</module>
         <module>client-spark/spark-3-columnar-shuffle</module>
         <module>client-spark/spark-3-shaded</module>
@@ -1413,7 +1412,7 @@
       <id>spark-3.2</id>
       <modules>
         <module>client-spark/common</module>
-        <module>client-spark/spark-3</module>
+        <module>client-spark/spark-3-4</module>
         <module>client-spark/spark-3-columnar-common</module>
         <module>client-spark/spark-3-columnar-shuffle</module>
         <module>client-spark/spark-3-shaded</module>
@@ -1432,7 +1431,7 @@
       <id>spark-3.3</id>
       <modules>
         <module>client-spark/common</module>
-        <module>client-spark/spark-3</module>
+        <module>client-spark/spark-3-4</module>
         <module>client-spark/spark-3-columnar-common</module>
         <module>client-spark/spark-3-columnar-shuffle</module>
         <module>client-spark/spark-3-shaded</module>
@@ -1451,7 +1450,7 @@
       <id>spark-3.4</id>
       <modules>
         <module>client-spark/common</module>
-        <module>client-spark/spark-3</module>
+        <module>client-spark/spark-3-4</module>
         <module>client-spark/spark-3-columnar-common</module>
         <module>client-spark/spark-3-columnar-shuffle</module>
         <module>client-spark/spark-3-shaded</module>
@@ -1470,7 +1469,7 @@
       <id>spark-3.5</id>
       <modules>
         <module>client-spark/common</module>
-        <module>client-spark/spark-3</module>
+        <module>client-spark/spark-3-4</module>
         <module>client-spark/spark-3-columnar-common</module>
         <module>client-spark/spark-3.5-columnar-shuffle</module>
         <module>client-spark/spark-3-shaded</module>
@@ -1482,6 +1481,25 @@
         <scala.binary.version>2.12</scala.binary.version>
         <spark.version>3.5.3</spark.version>
         <zstd-jni.version>1.5.5-4</zstd-jni.version>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>spark-4.0</id>
+      <modules>
+        <module>client-spark/common</module>
+        <module>client-spark/spark-3-4</module>
+        <module>client-spark/spark-3-columnar-common</module>
+        <module>client-spark/spark-4-columnar-shuffle</module>
+        <module>client-spark/spark-4-shaded</module>
+        <module>tests/spark-it</module>
+      </modules>
+      <properties>
+        <lz4-java.version>1.8.0</lz4-java.version>
+        <scala.version>2.13.11</scala.version>
+        <scala.binary.version>2.13</scala.binary.version>
+        <spark.version>4.0.0-preview2</spark.version>
+        <zstd-jni.version>1.5.5-6</zstd-jni.version>
       </properties>
     </profile>
 
