[Feat] User with zero quota should not be allowed to submit any shuffle to cluster.

--- a/master/src/test/resources/dynamicConfig-quota.yaml
+++ b/master/src/test/resources/dynamicConfig-quota.yaml
@@ -32,4 +32,9 @@
          celeborn.quota.tenant.diskBytesWritten: 100G
          celeborn.quota.tenant.diskFileCount: 10000
 
+     - name: Tom
+       config:
+         celeborn.quota.tenant.diskBytesWritten: 0G
+         celeborn.quota.tenant.diskFileCount: 0
+
 
