--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -295,14 +295,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/HandleResponse'
 
-  /api/v1/applications/deleteApp:
+  /api/v1/applications/deleteApps:
     get:
       tags:
         - Application
-      operationId: deleteApp
-      description: Delete resource of an app
+      operationId: deleteApps
+      description: Delete resource of apps
       parameters:
-        - name: app
+        - name: apps
           in: query
           required: false
           schema:
