--- a/client-tez/tez-shaded/pom.xml
+++ b/client-tez/tez-shaded/pom.xml
@@ -76,6 +76,9 @@
               <include>io.netty:*</include>
               <include>org.apache.commons:commons-lang3</include>
               <include>org.roaringbitmap:RoaringBitmap</include>
+              <include>org.scala-lang:scala-library</include>
+              <include>org.scala-lang:scala-reflect</include>
+              <include>org.lz4:lz4-java</include>
             </includes>
           </artifactSet>
           <filters>
