--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -402,11 +402,24 @@ paths:
               schema:
                 $ref: '#/components/schemas/HandleResponse'
 
-  /api/v1/ratis/local_raft_meta_conf:
+  /api/v1/ratis/local/raft_meta_conf:
+    get:
+      tags:
+        - Ratis
+      operationId: getLocalRaftMetaConf
+      description: Get the raft-meta.conf file of the current server.
+      responses:
+        "200":
+          description: The request was successful.
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
     post:
       tags:
         - Ratis
-      operationId: generateLocalRaftMetaConf
+      operationId: generateNewRaftMetaConf
       description: Generate a new-raft-meta.conf file based on original raft-meta.conf and new peers, which is used to move a raft node to a new node.
       requestBody:
         content:
