--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -36,7 +36,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
-      <artifactId>celeborn-openapi-client_${scala.binary.version}</artifactId>
+      <artifactId>celeborn-openapi-client</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
