[CELEBORN-1683] Support to get worker version

--- a/openapi/openapi-client/src/main/openapi3/worker_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/worker_rest_v1.yaml
@@ -453,6 +453,9 @@ components:
         isDecommissioning:
           type: boolean
           description: The decommission status of the worker.
+        version:
+          type: string
+          description: The version of the worker.
       required:
         - host
         - rpcPort
@@ -555,6 +558,9 @@ components:
         networkLocation:
           type: string
           description: The network location of the worker.
+        version:
+          type: string
+          description: The version of the worker.
       required:
         - host
         - rpcPort
