--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -858,6 +858,9 @@ components:
         networkLocation:
           type: string
           description: The network location of the worker.
+        version:
+          type: string
+          description: The version of the worker.
       required:
         - host
         - rpcPort
