--- a/tests/spark-it/pom.xml
+++ b/tests/spark-it/pom.xml
@@ -97,13 +97,13 @@
       <dependencies>
         <dependency>
           <groupId>org.apache.celeborn</groupId>
-          <artifactId>celeborn-client-spark-2_${scala.binary.version}</artifactId>
+          <artifactId>celeborn-client-spark-${spark.version.majorminor}_${scala.binary.version}</artifactId>
           <version>${project.version}</version>
           <scope>test</scope>
         </dependency>
         <dependency>
           <groupId>org.apache.celeborn</groupId>
-          <artifactId>celeborn-client-spark-2_${scala.binary.version}</artifactId>
+          <artifactId>celeborn-client-spark-${spark.version.majorminor}_${scala.binary.version}</artifactId>
           <version>${project.version}</version>
           <type>test-jar</type>
           <scope>test</scope>
