--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -292,7 +292,7 @@ paths:
       tags:
         - Application
       operationId: reviseLostShuffles
-      description: Revise lost shuffles or delete shuffles of an application.
+      description: Revise lost shuffles or deleted shuffles of an application.
       requestBody:
         content:
           application/json:
