--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -306,6 +306,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/HandleResponse'
 
+
   /api/v1/ratis/election/transfer:
     post:
       tags:
@@ -573,6 +574,13 @@ components:
         inNative:
           type: boolean
           description: Whether the thread is executing native code.
+        isDaemon:
+          type: boolean
+          description: Whether the thread is a daemon thread.
+        priority:
+          type: integer
+          format: int32
+          description: The priority of the thread.
       required:
         - threadId
         - threadName
